--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "vue": "^2.6.11",
+    "vue-material": "^1.0.0-beta-14",
     "vue-router": "^3.3.2",
     "vuex": "^3.1.3"
   },
